# rootfinder

./: .clangd  .gitignore
include/pysolvers/: py_solver.hpp
include/solvers/: solvers.hpp
python/: CMakeLists.txt  pyproject.toml
python/rootfinder/: __init__.py  _solvers.pyi  equations.py
python/src/: py_solver.cpp
