[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11>=2.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "solvers"
version = "0.1.0"
description = "Interface for compiled solvers"
requires-python = ">=3.8"
dependencies = []

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["solvers"]
